Collect WiFi signal strength and quality
Change-type: minor
Signed-off-by: Ken Bannister <kb2ma@runbox.com>

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -6,7 +6,8 @@ RUN install_packages \
     kmod \
     libiio0 \
     libiio-utils \
-    python3-libiio
+    python3-libiio \
+    wireless-tools
 
 WORKDIR /usr/src/app
 
