--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ services:
   sensor:
     image: balenablocks/sensor
     privileged: true
+    network_mode: host
     labels:
       io.balena.features.kernel-modules: '1'
       io.balena.features.sysfs: '1'
       io.balena.features.supervisor-api: '1'
     expose:
       - '7575'
-      
